devops/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  database

---

apiVersion: v1
kind: Namespace
metadata:
  name:  app
