devops/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: cloud.canister.io:5000/acibeee/auction-backend
        resources:
          limits:
            memory: "2048M"
            cpu: "1"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/v1/status
            port: 8080
            httpHeaders:
              - name: Test
                value: Backend is online!
          initialDelaySeconds: 120
          periodSeconds: 15
          timeoutSeconds: 10
      imagePullSecrets:
        - name: canister
