devops/k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: app
  labels:
    name: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
      - "backend.racun.ninja"
      secretName: backend-tls
  rules:
    - host: backend.racun.ninja
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: backend
              port: 
                number: 8080
